<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conversion_poses_to_tf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="julian.eichenbaum@alumni.fh-aachen.de">rpros2024ss</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>ament_cmake_python</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
